--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -162,9 +162,8 @@ a {
     color: var(--main-link-color);
 }
 
-a:hover,
-a:focus {
-    background-color: var(--clr-neutral-1000);
+a:hover {
+    cursor: pointer;
 }
 
 a:link,
