--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,6 +20,7 @@ const mainContent = 'main-content';
 			<SkipLink mainContent={mainContent} />
 			<nav>
 				<ul class="nav-links">
+					<li class="nav-link"><a href="#">Home</a></li>
 					<li class="nav-link"><a href="#projects">Projects</a></li>
 					<li class="nav-link"><a href="/blog/">Blog</a></li>
 					<li class="nav-link"><a href="#about">About</a></li>
@@ -58,7 +59,7 @@ const mainContent = 'main-content';
 			padding-block-end: 0;
 		}
 
-		.nav-links > li:nth-child(n + 4) {
+		.nav-links > li:nth-child(n + 5) {
 			margin-inline-start: auto;
 		}
 
