--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,13 +2,13 @@
 const { platform, username, TLD } = Astro.props;
 ---
 
-<style>
+<!-- <style>
     a {
       padding: 0.5rem 1rem;
       color: white;
       background-color: #4c1d95;
       text-decoration: none;
     }
-</style>
+</style> -->
 
 <a href={`https://www.${platform.replace(' ', '')}.${TLD}${username}`} target="_blank">{platform}</a>
