Stuck footer to the bottom of the page.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,6 +15,10 @@ const socials = [{
 }];
 ---
 <style>
+    footer {
+      grid-row: 0;
+    }
+
     p {
       text-align: center;
     }
@@ -24,8 +28,6 @@ const socials = [{
       gap: 1rem;
       margin-block: var(--gap-300) var(--gap-600);
       justify-content: center;
-      /* width: 80%;
-      margin-inline: auto; */
     }
 </style>
 
