--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,9 +21,9 @@ const mainContent = 'main-content';
 			<nav>
 				<ul class="nav-links">
 					<li class="nav-link"><a href="/">Home</a></li>
-					<li class="nav-link"><a href="#projects">Projects</a></li>
-					<li class="nav-link"><a href="/blog/">Blog</a></li>
-					<li class="nav-link"><a href="#about">About</a></li>
+					<li class="nav-link"><a href="/#projects">Projects</a></li>
+					<li class="nav-link"><a href="/blog">Blog</a></li>
+					<li class="nav-link"><a href="/#about">About</a></li>
 					<li>
 						<ThemeIcon />
 					</li>
