Adjusted homepage title em dash.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import letsbuilditHomepage from "../assets/letsbuildit_homepage.png";
 import linkcardsHomepage from "../assets/linkcards_homepage.png";
 import shufflifyHomepage from "../assets/shufflify_homepage.png";
 import gdHomepage from "../assets/gd_homepage.png";
-const pageTitle = 'Nicholas Boyce-Software Engineer';
+const pageTitle = 'Nicholas Boyce — Software Engineer';
 ---
 <style>
 	.hero {
