Updated link to LinkCards service.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -290,7 +290,9 @@ const pageTitle = 'Nicholas Boyce — Software Engineer';
 						<h2>LinkCards</h2>
 					</a>
 					<figure>
-						<Image src={linkcardsHomepage} alt="LinkCards Homepage screenshot." />
+						<a href="https://linkcards.bio" target="_blank">
+							<Image src={linkcardsHomepage} alt="LinkCards Homepage screenshot." />
+						</a>
 						<figcaption>A convenient all in one place social link sharing app.</figcaption>
 					</figure>
 					<div class="description-wrapper">
