Fixed spacing for blog post listing and post text.

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -10,6 +10,7 @@ const { url, title, description, date } = Astro.props;
     li {
         display: grid;
         row-gap: var(--gap-400);
+        margin-block-end: var(--gap-600);
     }
 </style>
 <li>
