--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,6 +6,7 @@ import BlogPost from '../components/BlogPost.astro';
 const pageTitle = "My Blog";
 
 const posts = await getCollection("posts");
+posts.reverse();
 ---
 <style>
     .center-align {
