Improved spacing between paragraphs.

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -32,6 +32,8 @@ const { frontmatter } = Astro.props;
     .article-body {
         margin-block-start: var(--gap-600);
         line-height: 2;
+        display: grid;
+        row-gap: var(--gap-500);
     }
 
     @media screen and (min-width: 830px) {
