--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -377,7 +377,7 @@ const pageTitle = 'Nicholas Boyce — Software Engineer';
 	<section id="about" aria-labelledby="about-heading" class="about">
 		<h1 id="about-heading">My Story</h1>
 		<p class="section-body">
-			I'm a first-gen college student (and first-gen immigrant) who graduated from Bowdoin College in 2022 with a Bachelor of Arts in Economics. I spent the first year out of college working in investment banking across insurance, healthcare, and fintech companies. After a yearlong sabbatical to attend to my physical and mental health, I've been diving into software engineering to develop my problem solving skills and nourish my creativity. I'm also a never-alum of the <a href="https://www.recurse.com" target="_blank" class="recurse">Recurse Center</a>!
+			I'm a first-gen college student (and second-gen immigrant) who graduated from Bowdoin College in 2022 with a Bachelor of Arts in Economics. I spent the first year out of college working in investment banking across insurance, healthcare, and fintech companies. After a yearlong sabbatical to attend to my physical and mental health, I've been diving into software engineering to develop my problem solving skills and nourish my creativity. I'm also a never-alum of the <a href="https://www.recurse.com" target="_blank" class="recurse">Recurse Center</a>!
 		</p>
 	</section>
 </BaseLayout>
